<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/layout_movie_detail_header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxEms="12"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/layout_movie_detail_header_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="14dp"
        tools:text="@string/releasing_date_txt" />

    <RatingBar
        android:id="@+id/layout_movie_detail_header_rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        tools:rating="1.5f" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/vote_txt"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/layout_movie_detail_header_vote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
         android:textColor="@color/white"
        android:textSize="14dp"
        tools:text="0" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/revenue_txt"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/layout_movie_detail_header_revenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
         android:textColor="@color/white"
        android:textSize="14dp"
        tools:text="@string/null_revenue_txt" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/duration_txt"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/layout_movie_detail_header_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
         android:textColor="@color/white"
        android:textSize="14dp"
        tools:text="@string/null_duration_txt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/overview_txt"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/layout_detail_overview_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:text="@string/overview_txt" />

</LinearLayout>
